# ygopro_core_rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs  pkgs.nix  shell.nix
src/: card.rs  common.rs  duel.rs  error.rs  lib.rs  player.rs  query.rs
ygopro-core-rs-sys/: Cargo.toml  build.rs
