[package]
name = "ygopro-core-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "./ygopro-core-rs-sys"
]

[dependencies]
bitflags = "2.4.1"
thiserror = "1.0"
ygopro-core-rs-sys = {path = "./ygopro-core-rs-sys" }
